# Makefile.am for GPGME-JS.
# Copyright (C) 2018 2018 Bundesamt für Sicherheit in der Informationstechnik
#
# This file is part of GPGME-JS.
#
# GPGME-JS is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# GPGME-JS is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA

SUBDIRS = src BrowserTestExtension DemoExtension

EXTRA_DIST = build_extensions.sh \
             CHECKLIST \
             CHECKLIST_build \
             .eslintrc.json \
             Makefile.am \
             package.json \
             README \
             README_testing \
             unittest_inputvalues.js \
             unittests.js \
             webpack.conf.js \
             webpack.conf_unittests.js
