# Makefile.am for gpgme.js.
# Copyright (C) 2018 Bundesamt für Sicherheit in der Informationstechnik
#
# This file is part of gpgme.js.
#
# gpgme.js is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# gpgme.js is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this program; if not, see <https://gnu.org/licenses/>.
# SPDX-License-Identifier: LGPL-2.1-or-later

SUBDIRS = src BrowserTestExtension DemoExtension

EXTRA_DIST = build_extensions.sh \
             jsdoc.conf \
             jsdoc_index.md \
             .eslintrc.json \
             package.json \
             README \
             unittest_inputvalues.js \
             unittests.js \
             webpack.conf.js \
             webpack.conf_unittests.js
